--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,25 @@
 :root {
+  --bg-light: #fffff8;
+  --bg-dark: #232639;
+  --text-light: #4d6ba1; /* 5.31 (fails AAA) */
+  --text-dark: #fffff8; /* 14.85 */
+  /* light; dark contrast ratios from webaim */
+  --contrast-purple: #c759b8; /* 3.76; 3.94 TODO FAILS */
+  --contrast-orange: #e73f32; /* 4.05; 3.66 TODO FAILS */
+  --darker-gray: #767a9b; /* 4.15; 3.57 TODO FAILS */
+  --light-gray: #d6e0e9; /* 1.33; 11.15 */
+  --blueish-gray: #a0b0c6; /* 2.19 TODO FAILS; 6.76 */
+  --red-border: #711919; /* 11.27; 1.31 */
+  --teal-lineart: #2d8da6; /* 3.82; 3.88 */
+
   font-family: "Nunito Sans", sans-serif;
   line-height: 1.2;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* Light mode colors */
+  color: var(--text-light);
+  background-color: var(--bg-light);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,61 +27,46 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 h1 {
   font-family: "DM Serif Display", serif;
   font-size: 3.4em;
   line-height: 1.1;
+  margin-block-start: 0;
+  color: var(--contrast-orange);
 }
 
 h2 {
-  font-family: "Crimson Bold", serif;
+  font-family: "Crimson Text", serif;
   font-size: 2.3em;
   line-height: 1.1;
+  color: var(--darker-gray);
 }
 
 h3 {
-  font-family: "Geologica", "Nunito Sans", serif;
-  font-size: 1.0em;
-  line-height: 1.1
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-family: "Geologica", "Nunito Sans", sans-serif;
+  font-size: 1.3em;
+  line-height: 1.1;
+  color: var(--blueish-gray);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--text-dark);
+    background-color: var(--bg-dark);
   }
-  a:hover {
-    color: #747bff;
+  h1 {
+    color: var(--contrast-orange);
   }
-  button {
-    background-color: #f9f9f9;
+  h2 {
+    color: var(--light-gray);
+  }
+  h3 {
+    color: var(--blueish-gray);
+  }
+  a {
+    color: var(--teal-lineart);
+  }
+  a:visited {
+    color: var(--contrast-purple);
   }
 }
